fix: fixed css for editor so overflow now scrolls cleanly

--- a/public/global.css
+++ b/public/global.css
@@ -245,7 +245,7 @@ button:focus {
 	padding: 1px 6px;
 	top: 0; left: 0; right: 0;
 	border-bottom: 1px solid var(--lines);
-	background: var(--background);
+	/* background: var(--background); */
 	z-index: 10;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
@@ -299,7 +299,13 @@ button:focus {
   }
 
   div.ProseMirror-example-setup-style, div.ProseMirror-menubar-wrapper {
-	height: calc(100% - 6px);
+	height: 100%;
+  }
+
+  div.ProseMirror-example-setup-style {
+	max-height: calc(100% - 53px);
+	overflow: auto;
+	padding-bottom: 20px;
   }
 
   /* Add space around the hr to make clicking it easier */
@@ -393,7 +399,7 @@ button:focus {
 	background-clip: padding-box;
 	border-radius: 4px;
 	border: 1px solid var(--lines);
-	padding: 5px 0;
+	/* padding: 5px 0; */
 	margin-bottom: 23px;
 	height: calc(100% - 80px);
   }
